# pubg-py-tracker

./: .flake8  .pre-commit-config.yaml  AUTO_TAGGING.md  Dockerfile  LICENSE  README.md  RELEASE_GUIDE.md  __init__.py  clear_processed_matches.py  debug_service.py  debug_test.py  docker-compose.yml  env.example  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: pubg.mdc
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-publish.yml
config/: settings.py
models/: match.py  player.py  processed_match.py
pubg_types/: pubg_types.py  telemetry_types.py
services/: discord_bot_service.py  match_monitor_service.py  pubg_api_service.py  storage_service.py
types/: discord_types.py  pubg_types.py
utils/: mappings.py  rate_limiter.py
